Refactor CORS configuration to use a dedicated method and simplify allowed origins and headers